--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   flex_color_scheme: ^7.3.1
   google_fonts: ^4.0.4
+  intl: ^0.19.0
   
 dev_dependencies:
   flutter_test:
